--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>2.9.2</version>
+            <!-- 生产环境已经存在，不需要打包 -->
+            <scope>provided</scope>
         </dependency>
 
         <!-- 单元测试 -->
@@ -36,21 +38,39 @@
             <version>4.12</version>
         </dependency>
 
+        <!-- 添加UserAgentParser 解析的依赖-->
+        <dependency>
+            <groupId>com.kumkee</groupId>
+            <artifactId>UserAgentParser</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+        <!-- 添加spring boot 的依赖 -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-hadoop-boot</artifactId>
+            <version>2.5.0.RELEASE</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
+    <!-- mvn assembly:assembly -->
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+                    <archive>
+                        <manifest>
+                            <mainClass></mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
